examples/errors/subscript_on_non_array.alan
main(): proc
    x: int;
{
    x[0] = 42;
}